--- a/public/view/tourisms.html
+++ b/public/view/tourisms.html
@@ -19,11 +19,11 @@
                 <td style="width: 40%;" ng-bind="v.name">
                 </td>
                 <td style="width: 30%;">
-                    <a ui-sref="tourismEdit({url:'tourismEdit.html',ctrl:'tourismEditCtrl',id:v.id})">编辑</a>
+                    <a ui-sref="tourismForm({id:v.id})">编辑</a>
                 </td>
             </tr>
             </tbody>
         </table>
-        <a ui-sref="add({url:'tourismEdit.html',ctrl:'tourismEditCtrl'})">添加</a>
+        <a style="display:inline-block;width: 88px;height:34px;line-height: 34px;text-align: center;border-radius: 4px;background-color: #d84527;color: #ffffff;margin-left: 20px" ui-sref="tourismForm">添加</a>
     </div>
 </div>
