--- a/public/view/bus/busForm.html
+++ b/public/view/bus/busForm.html
@@ -13,6 +13,16 @@
                 </span>
             </div>
         </div>
+        <div class="offset">
+            <div class="input_group">
+                <label>车牌号</label>
+
+                <div class="cutline"></div>
+                <span>
+                    <input type="text" name="count" ng-model="postData.lisence"/>
+                </span>
+            </div>
+        </div>
         <button style="margin-top: 20px;border: 0;margin-left: 233px;display:inline-block;width: 88px;height:34px;line-height: 34px;text-align: center;border-radius: 4px;background-color: #d84527;color: #ffffff;"  ng-if="!postData.id" ng-click="submit($event)">增加</button>
         <button style="margin-top: 20px;border: 0;margin-left: 233px;display:inline-block;width: 88px;height:34px;line-height: 34px;text-align: center;border-radius: 4px;background-color: #d84527;color: #ffffff;"  ng-if="postData.id" ng-click="submit($event)">编辑</button>
     </form>
