--- a/public/view/bus/busno.html
+++ b/public/view/bus/busno.html
@@ -1,3 +1,31 @@
-<h3>busno</h3>
-<a ui-sref="add({url:'busnoEdit.html',ctrl:'add'})">添加</a>
-<a ui-sref="productEdit({url:'busnoEdit.html',ctrl:'productEditCtrl',id:1})">编辑</a>
+<h1>这里是busno</h1>
+<div class="search-wrapper">
+</div>
+<div class="container_main">
+    <table class="table">
+        <thead>
+        <tr>
+            <th style="width:10%">序号</th>
+            <th style="width:30%">线路名</th>
+            <th style="width:30%">出发时间</th>
+            <th style="width:30%">操作</th>
+        </tr>
+        </thead>
+    </table>
+    <div class="grid" tabindex="5000" style="overflow: hidden; outline: none;">
+        <table class="table">
+            <tbody>
+            <tr ng-repeat="v in viewData">
+                <td style="width: 10%;" ng-bind="v.id"></td>
+                <td style="width: 30%;" ng-bind="v.name"></td>
+                <td style="width: 30%;" ng-bind="v.time"></td>
+                <td style="width: 30%;">
+                    <a ui-sref="busnoForm({id:v.id})">编辑</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <a style="display:inline-block;width: 88px;height:34px;line-height: 34px;text-align: center;border-radius: 4px;background-color: #d84527;color: #ffffff;margin-left: 20px" ui-sref="busnoForm">添加</a>
+    </div>
+</div>
+
