--- a/public/view/bus/busnoForm.html
+++ b/public/view/bus/busnoForm.html
@@ -5,21 +5,25 @@
 
         <div class="offset">
             <div class="input_group">
-                <label>busno</label>
+                <label>bus名</label>
 
                 <div class="cutline"></div>
                 <span>
                     <input type="text" name="count" ng-model="postData.name"/>
                 </span>
             </div>
+        </div>
+        <div class="offset">
             <div class="input_group">
-                <label>asd</label>
+                <label>出发时间</label>
 
                 <div class="cutline"></div>
                 <span>
-                    <input type="text" name="count" ng-model="postData.age"/>
+                    <input type="text" name="count" ng-model="postData.time"/>
                 </span>
             </div>
         </div>
+        <button style="margin-top: 20px;border: 0;margin-left: 233px;display:inline-block;width: 88px;height:34px;line-height: 34px;text-align: center;border-radius: 4px;background-color: #d84527;color: #ffffff;"  ng-if="!postData.id" ng-click="submit($event)">增加</button>
+        <button style="margin-top: 20px;border: 0;margin-left: 233px;display:inline-block;width: 88px;height:34px;line-height: 34px;text-align: center;border-radius: 4px;background-color: #d84527;color: #ffffff;"  ng-if="postData.id" ng-click="submit($event)">编辑</button>
     </form>
 </div>
